Minor Sentence Reformatting In Conclusion

--- a/Jupyter Notebook.ipynb
+++ b/Jupyter Notebook.ipynb
@@ -12958,7 +12958,7 @@
     "\n",
     "The models were assessed using the following scores: Precision, Recall, F1, and ROC-AUC. All five models acquired high scores on both the validation set and the training set; in fact, the <u>LOWEST</u> F1 and ROC-AUC scores were 0.8 and 0.88, respectively (the former is from the **Star** archetype's model on the test set, and the latter is from the **Star** archetype's model on the validation set).\n",
     "\n",
-    "Ultimately, the goal was to assemble an NBA team with 15 players such that the team has three players of each archetype and the team's total salary is under $140 million. With a total salary that is less than $83.5 million, here is the team:\n",
+    "Ultimately, the goal was to assemble an NBA team with 15 players such that the team has three players of each archetype and the team's total salary is under \\$140 million. With a total salary that is less than \\$83.5 million, here is the team:\n",
     "\n",
     "**STARS**\n",
     "1) Anthony Edwards\n",
